--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,25 @@ td, th{
 	overflow:scroll;
 }
 
-#agenda, #agenda th, #agenda td{
-border: 5px ridge lightblue;
+ #agenda td{
+border-width:5px;
+border-style:outset;
+border-color:red;
+
 }	
 	
+.font{
+background: rgb(193,3,48); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(193,3,48,1) 0%, rgba(170,2,41,1) 77%, rgba(138,0,32,1) 93%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(193,3,48,1)), color-stop(77%,rgba(170,2,41,1)), color-stop(93%,rgba(138,0,32,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c10330', endColorstr='#8a0020',GradientType=0 ); /* IE6-9 */
+font-weight:bold;
+color:white;
+}
 #champ-texte{
 	width:60%;
 }
@@ -482,7 +497,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bc002c', end
 	font-family:/*Comic Sans MS*/ Tahoma, Geneva, sans-serif;
 	font-size:15px;
 	font-weight:bold;
-	color:white;
+
 	font-style:italic;
 	height:30px;
 	line-height:30px;
@@ -493,6 +508,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bc002c', end
 	white-space: nowrap;
 	padding: 0 10px 0 10px;
 }
+
+div.bouton a, div.boutonbegin a, div.boutonend a{
+color:white;
+}
+
 
 div.bouton:hover, div.boutonbegin:hover, div.boutonend:hover {
 background: rgb(255,48,25); /* Old browsers */
