--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -101,21 +101,21 @@ td, th{
 }
 
  #agenda td{
-border-width:5px;
-border-style:outset;
-border-color:red;
+border-width:2px;
+border-style:double;
+border-color:#7B011D;
 
 }	
 	
 .font{
-background: rgb(193,3,48); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(193,3,48,1) 0%, rgba(170,2,41,1) 77%, rgba(138,0,32,1) 93%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(193,3,48,1)), color-stop(77%,rgba(170,2,41,1)), color-stop(93%,rgba(138,0,32,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* IE10+ */
-background: linear-gradient(to bottom, rgba(193,3,48,1) 0%,rgba(170,2,41,1) 77%,rgba(138,0,32,1) 93%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c10330', endColorstr='#8a0020',GradientType=0 ); /* IE6-9 */
+background: rgb(169,3,41); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(169,3,41,1) 100%, rgba(109,0,25,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(100%,rgba(169,3,41,1)), color-stop(100%,rgba(109,0,25,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(169,3,41,1) 100%,rgba(109,0,25,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(169,3,41,1) 100%,rgba(109,0,25,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(169,3,41,1) 100%,rgba(109,0,25,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom, rgba(169,3,41,1) 100%,rgba(109,0,25,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
 font-weight:bold;
 color:white;
 }
